# librtlsdr_cmake

./: .gitignore  LICENSE.txt  README.md  rtlsdr-config.cmake
.github/workflows/: arm-linux.yml  x86-linux.yml  x86-windows.yml
examples/: CMakeLists.txt  README.md  rtl_sdr.c  rtl_sdr.cpp
examples/toolchains/arm/: cmake_configure.sh  install_packages.sh
examples/toolchains/x86/: cmake_configure.sh  install_packages.sh
include/: rtl-sdr.h
lib/x64/: libusb-1.0.lib  libwinpthread-1.lib
